--- a/assets/dimlom/vhod.html
+++ b/assets/dimlom/vhod.html
@@ -128,7 +128,7 @@
 			<a href="#0" class="cd-close-form">Закрыть</a>
 		</div> <!-- cd-user-modal-container -->
 	</div> <!-- cd-user-modal -->
-	<div class="news" style="background-color: #FFFFFF;width: 65%;">
+	<div class="news" style="background-color: #FFFFFF;width: 90%;text-align: center;">
 		<img src="images/2155834.jpg" alt="Новости">
 		<p>
 			<h1>Укрзализныця повысила тарифы на пассажирские перевозки на 12%. Второй этап повышения должен состояться в октябре.</h1>
